# programming_abstractions_in_c

./: CMakeLists.txt
chapter2/: exercise1_weekdayenumeration.c  exercise2_cylinder.c  exersice1_weekdayenumeration.c
